# myMLenv

./: .gitignore  README.md  pyproject.toml
samples/: pyspark_sample.ipynb  tensorflow_mlflow.ipynb
samples/mlruns/0/: meta.yaml
samples/mlruns/220654029583824991/: meta.yaml
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/: meta.yaml
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/artifacts/: model_summary.txt
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/artifacts/model/data/model/: keras_metadata.pb  saved_model.pb
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/artifacts/model/data/model/variables/: variables.index
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/artifacts/tensorboard_logs/train/: events.out.tfevents.1673797866.DESKTOP-73L9D9K.17520.0.v2
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/artifacts/tensorboard_logs/validation/: events.out.tfevents.1673797880.DESKTOP-73L9D9K.17520.1.v2
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/metrics/: accuracy  auc  loss  val_accuracy  val_auc  val_loss
samples/mlruns/220654029583824991/3ede8207c71d4620ba18b3fa0e4c0c41/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
